added swagger and improvements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,16 @@
-version: '3'
+version: '3.8'
 
 
 services:
+
+  app:
+    build: .
+    container_name: invoices
+    ports:
+      - "8181:8181"
+    depends_on:
+      - mongodb
+
   mongodb:
     container_name: ${COINTAINER_NAME}
     image: "mongo:4.2.16-bionic"
